# pybird

./: .dockerignore  .gitignore  Dockerfile  README.md  README.txt  entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: django.yml
clades/: admin.py  filters.py  models.py  search_indexes.py  urls.py  views.py
clades/fixtures/: initial_data.json  initial_data.json.BAD
clades/templates/clades/: _base.html  index.html  species_detail.html
clades/templates/search/indexes/clades/: species_text.txt
locale/ca/LC_MESSAGES/: django.po
locale/es/LC_MESSAGES/: django.po
locations/: admin.py  models.py
locations/fixtures/: initial_data.json
photos/: admin.py  models.py  urls.py  views.py
photos/templates/photos/: _base.html  detail.html  equipment.html  index.html
pybird/: asgi.py  models.py  settings.py  settings_new.py  urls.py  urls_new.py  views.py  wsgi.py
pybird/static/css/: color.css  forms.css  layout.css  pybird.css  typo.css
pybird/templates/: _base.html  _layout.html  index.html
pybird/templates/search/: search.html
sightings/: admin.py  models.py  search_indexes.py  urls.py  views.py
sightings/templates/search/indexes/sightings/: sighting_text.txt
sightings/templates/sightings/: _base.html  index.html  sighting_detail.html
